--- a/Jethro.css
+++ b/Jethro.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-    background-color: #007bff;
+    background-color: #000408;
     color: white;
     padding: 40px 0;
     text-align: center;
