--- a/Jethro.css
+++ b/Jethro.css
@@ -46,7 +46,7 @@ nav a {
 }
 
 nav a:hover {
-    color: #ffd700; /* Change color on hover */
+    color: #00ff55; /* Change color on hover */
 }
 
 main {
